--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <script type="text/x-template" id="block_template">
 
-        <div class="w-full flex bg-white p-2 mv_block" :id="index">
+        <div class="w-full flex bg-white p-2 mv_block" :id="id">
             <div class="flex-initial w-8 pt-1">
                 <i class="fa fa-arrows w-full" aria-hidden="true"></i>
                 <i class="fa fa-floppy-o w-full mt-2" aria-hidden="true" @click="saveBlock"></i>                
@@ -60,7 +60,7 @@
 
             </div>
             <div class="flex-auto bg-gray-100 p-4">
-                <textarea name="description" v-model="description" @change="keymonitor" class="form-control tinymce"></textarea>
+                <textarea :id="`block_editor_${id}`" name="description" v-model="description" class="form-control tinymce"></textarea>
             </div>
         </div>
 
@@ -74,7 +74,7 @@
             },
             methods: {
                 addBlock: function( event ){
-                    this.blocks.push( { } );
+                    this.blocks.push( { id: Math.floor(Math.random()*10000) } );
                     this.saveBlocks();
                     this.makeSortable();
                 },
@@ -85,7 +85,7 @@
                 deleteBlock: function( payload ) {
                     if ( confirm( 'Are you sure you want to delete this block?' ) ) {
                         //this.deleteAction( this.user_actions[ payload.index ].id );
-                        this.$delete( this.blocks, payload.index );
+                        this.$delete( this.blocks, payload.id );
                         this.saveBlocks();
                         this.makeSortable();
                     } else {
@@ -94,16 +94,30 @@
                 },
                 updateBlock: function( payload ) {
                     console.log( payload.content );
-                    this.blocks[payload.index] = payload.content;
+                    for (var i = 0; i < this.blocks.length; i++) {
+                        if ( this.blocks[i].id === payload.id ) {
+                            this.blocks[i].description = payload.content;
+                            break;
+                        }
+                    }
+                    //this.blocks.[payload.id] = payload.content;
                     this.saveBlocks();
                 },
                 makeSortable: function() {
                     $('.sortable').sortable({
                         handle: ".fa-arrows",
+                        start: function( event, ui ){
+                            var p_sIds = '';
+                            $('.sortable div.mv_block').each(function(){
+                                console.log( $(this).prop('id') );
+                                tinymce.execCommand('mceRemoveEditor', false, 'block_editor_' + $(this).prop('id'));
+                            });
+                        },
                         stop: function( event, ui ){
                             var p_sIds = '';
                             $('.sortable div.mv_block').each(function(){
                                 p_sIds = p_sIds + $(this).prop('id') + ',';
+                                tinymce.execCommand('mceAddEditor', false, 'block_editor_' + $(this).prop('id'));
                             });
                             console.log( p_sIds );
                             /*
@@ -126,27 +140,32 @@
     <script>
         Vue.component('mv-block', {
             template: '#block_template',
-            props: ['id','index'],
+            props: ['id', 'description'],
             data () {
                 return {
-                    description: ''
+                    description: this.description
                 };
             },
             mounted(){
-                //initTinyMCE();
+                //this.id = Math.floor(Math.random()*10000);
+
+                initTinyMCE( '#block_editor_' + this.id );
+
+
+                
+                console.log( this.id );
             },
             methods: {
                 saveBlock: function( event ) {
                     console.log('save block');
                     tinyMCE.triggerSave();
-                    this.$emit('update-block', { index: this.index, content: this.description } );
-                },
-                keymonitor: function( event ) {
-                    console.log('changed text');
-                    this.$emit('update-block', { index: this.index, content: this.description } );
+                    this.description = tinymce.get("block_editor_" + this.id ).getContent();
+                    console.log( this.description );
+
+                    this.$emit('update-block', { id: this.id, content: this.description } );
                 },
                 deleteBlock: function( event ) {
-                    this.$emit('delete-block', { index: this.index } );
+                    this.$emit('delete-block', { id: this.id } );
                 },
             }
         });
